# nodecode-terminal-kit

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/nodecode-terminal-kit/: Cargo.toml
crates/nodecode-terminal-kit-runtime/: Cargo.toml
crates/nodecode-terminal-kit-runtime/src/: command.rs  config.rs  error.rs  lib.rs  model.rs  program.rs
crates/nodecode-terminal-kit/src/: lib.rs
crates/nodecode-terminal-kit/src/components/: component.rs  dialog_shell.rs  dropdown.rs  help_bar.rs  key_hints.rs  lines_viewport.rs  list.rs  list_items.rs  mod.rs  overlay_dialog.rs  picker.rs  picker_dialog.rs  search_bar.rs  tabbed_prompt_dialog.rs  text_input.rs
crates/nodecode-terminal-kit/src/components/input_box/: mod.rs
crates/nodecode-terminal-kit/src/components/tabbed_dialog/: mod.rs
crates/nodecode-terminal-kit/src/layout/: branding.rs  mod.rs  section_stack.rs  text.rs
crates/nodecode-terminal-kit/src/layout/picker_kit/: mod.rs
crates/nodecode-terminal-kit/src/primitives/: geom.rs  mod.rs  path.rs  rich_text.rs  scrollbar.rs  shimmer.rs  text.rs
crates/nodecode-terminal-kit/src/theme/: colors.rs  cursor.rs  mod.rs
crates/nodecode-terminal-kit/src/wizard/: framework.rs  layout.rs  mod.rs  model.rs  text_step.rs  view.rs
crates/nodecode-terminal-kit/src/wizard/steps/: mod.rs  summary.rs
examples/dashboard-starter/: Cargo.toml
examples/dashboard-starter/src/: main.rs
examples/demo-components/: Cargo.toml
examples/demo-components/src/: main.rs
examples/form-starter/: Cargo.toml
examples/form-starter/src/: main.rs
examples/wizard-starter/: Cargo.toml
examples/wizard-starter/src/: main.rs
templates/minimal-terminal-app/: Cargo.toml
templates/minimal-terminal-app/src/: main.rs
templates/presets/dashboard/: Cargo.toml  README.md
templates/presets/dashboard/src/: main.rs
templates/presets/form/: Cargo.toml  README.md
templates/presets/form/src/: main.rs
templates/presets/wizard/: Cargo.toml  README.md
templates/presets/wizard/src/: main.rs
